--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <button class="donation-btn">
                 Make a Donation
             </button>
-            <a href="/signuppage.html"  target="_blank">
+            <a href="signuppage.html"  target="_blank">
                 <button class="get-started-btn">Get Started</button>
             </a>
         
