--- a/signin.html
+++ b/signin.html
@@ -38,8 +38,8 @@
         </form>
        
         <div class="sign-in-alt">
-            <p class="account">Don't have an account? <a href="/signuppage.html" target="_blank">Sign Up</a></p>
-            <p class="org">Are you an Organisation? <a href="/signuppage.html" target="_blank" >Log in as an Org</a></p>
+            <p class="account">Don't have an account? <a href="signuppage.html" target="_blank">Sign Up</a></p>
+            <p class="org">Are you an Organisation? <a href="signuppage.html" target="_blank" >Log in as an Org</a></p>
         </div>
 
     </div>
