--- a/signuppage.html
+++ b/signuppage.html
@@ -18,7 +18,7 @@
       </style>
 
       <div class="logo">
-            <a href="/index.html" class="img-link">
+            <a href="index.html" class="img-link">
                   <img src="Image/willGives-logo.png" alt="">
                   <p>willGives</p>
             </a>
